--- a/modules/resource_module/src/main/res/values/styles.xml
+++ b/modules/resource_module/src/main/res/values/styles.xml
@@ -38,4 +38,14 @@
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
+    <style name="sf_pro_dish_name">
+        <item name="android:fontFamily">@font/sf_pro_text_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">15sp</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
 </resources>
