--- a/modules/ui_categories/src/main/res/layout/categories_viewholder.xml
+++ b/modules/ui_categories/src/main/res/layout/categories_viewholder.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp">
 
     <ImageView
         android:id="@+id/category_image"
@@ -18,7 +19,8 @@
         style="@style/sf_pro_medium_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLength="20"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:maxLines="3"
         android:inputType="textMultiLine"
         tools:text ="Пекарни и кондитерские"
