--- a/modules/resource_module/src/main/res/values/styles.xml
+++ b/modules/resource_module/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:textSize">10sp</item>
         <item name="android:lineHeight">11sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:lineSpacingExtra">1sp</item>
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
@@ -15,7 +15,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:lineHeight">22sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
@@ -25,7 +25,7 @@
         <item name="android:lineHeight">16sp</item>
         <item name="android:fontWeight">400</item>
         <item name="android:textColor">@color/figma_black_transparent</item>
-        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:lineSpacingExtra">2sp</item>
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
@@ -44,7 +44,47 @@
         <item name="android:lineHeight">15sp</item>
         <item name="android:fontWeight">400</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:lineSpacingExtra">1sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
+    <style name="sf_pro_details_dish_name">
+        <item name="android:fontFamily">@font/sf_pro_text_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineHeight">17sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:lineSpacingExtra">1sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
+    <style name="sf_pro_details_dish_price">
+        <item name="android:fontFamily">@font/sf_pro_text_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">14.7sp</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:lineSpacingExtra">1sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
+    <style name="sf_pro_details_dish_weight">
+        <item name="android:fontFamily">@font/sf_pro_text_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">14.7sp</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:textColor">@color/figma_black_transparent</item>
+        <item name="android:lineSpacingExtra">1sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
+    <style name="sf_pro_headline_3">
+        <item name="android:fontFamily">@font/sf_pro_text_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineHeight">17.6sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:lineSpacingExtra">1sp</item>
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
