--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_height="0dp"
@@ -20,6 +21,8 @@
         android:layout_marginEnd="0dp"
         app:itemPaddingBottom="17dp"
         app:itemPaddingTop="12dp"
+        android:elevation="0dp"
+        app:elevation="0dp"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation_items"
         android:theme="@style/sf_pro_medium_tab"
@@ -31,4 +34,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/full_fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
