--- a/modules/resource_module/src/main/res/values/styles.xml
+++ b/modules/resource_module/src/main/res/values/styles.xml
@@ -78,13 +78,26 @@
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
-    <style name="sf_pro_headline_3">
+    <style name="sf_pro_medium_headline_3">
         <item name="android:fontFamily">@font/sf_pro_text_medium</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineHeight">17.6sp</item>
-        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:lineSpacingExtra">1sp</item>
+        <item name="android:lineSpacingMultiplier">0</item>
+    </style>
+
+    <style name="sf_pro_medium_headline_3.white">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="sf_pro_display_subhead_2">
+        <item name="android:fontFamily">@font/sf_pro_text_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">14.7sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:lineSpacingMultiplier">0</item>
     </style>
 
