--- a/modules/ui_dishes/src/main/res/layout/dish_detailes.xml
+++ b/modules/ui_dishes/src/main/res/layout/dish_detailes.xml
@@ -121,7 +121,7 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/add_to_cart"
-            style="@style/sf_pro_headline_3"
+            style="@style/sf_pro_medium_headline_3"
             android:background="@drawable/blue_button"/>
 
         <View
