--- a/modules/resource_module/src/main/res/values/colors.xml
+++ b/modules/resource_module/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="figma_black_transparent">#80000000</color>
     <color name="figma_card_background">#F8F7F5</color>
     <color name="figma_transparent_background">#66000000</color>
+    <color name="figma_light_grey">#EFEEEC</color>
 </resources>
