add sum button in cart

--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -1,47 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_height="57dp"
+    tools:showIn="@layout/activity_main">
+
     <View
         android:id="@+id/top_box"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/figma_arrow_back"
+        app:layout_constraintTop_toTopOf="@id/top_box"
+        app:layout_constraintStart_toStartOf="@id/top_box" />
+
+    <TextView
+        android:id="@+id/category"
+        style="@style/sf_pro_medium_headline_1"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="@id/top_box"
+        app:layout_constraintEnd_toEndOf="@id/top_box"
+        app:layout_constraintTop_toTopOf="@id/top_box"
+        android:layout_marginTop="16dp"
+        android:layout_width="229dp"
+        android:layout_height="wrap_content"
+        tools:text="Санкт-Петербург" />
 
     <ImageView
         android:id="@+id/location_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:src="@drawable/categories_navigation_icon"
-        app:layout_constraintTop_toTopOf="@id/top_box"
-        app:layout_constraintStart_toStartOf="@id/top_box" />
+        app:layout_constraintStart_toStartOf="@id/top_box"
+        app:layout_constraintTop_toTopOf="@+id/location" />
 
     <TextView
         android:id="@+id/location"
+        style="@style/sf_pro_medium_headline_1"
         app:layout_constraintStart_toEndOf="@id/location_icon"
         app:layout_constraintTop_toTopOf="@id/top_box"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text = "Санкт-Петербург"/>
+        tools:text="Турция" />
 
     <TextView
         android:id="@+id/date"
+        style="@style/sf_pro_display_subhead_1"
         app:layout_constraintStart_toEndOf="@id/location_icon"
         app:layout_constraintTop_toBottomOf="@id/location"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text = "12 Августа, 2023"/>
+        tools:text="12 Августа, 2023" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -50,7 +76,5 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="17dp"
         app:layout_constraintEnd_toEndOf="@id/top_box"
-        app:layout_constraintTop_toTopOf="@id/top_box"/>
-
-
+        app:layout_constraintTop_toTopOf="@id/top_box" />
 </androidx.constraintlayout.widget.ConstraintLayout>
